--- a/Login.html
+++ b/Login.html
@@ -12,11 +12,11 @@
 		<p class="tulisan_login">Jangan dulu Login</p>
  
 		<form>
-			<label>Username</label>
-			<input type="text" name="username" class="form_login" placeholder="Username atau email ..">
+			<label>Username </label>
+			<input type="text" name="username" class="form_login" placeholder="Username">
  
 			<label>Password</label>
-			<input type="text" name="password" class="form_login" placeholder="Password ..">
+			<input type="text" name="password" class="form_login" placeholder="Password">
  
 			<input type="submit" class="tombol_login" value="LOGIN">
 		</form>
